try to run the init.sh

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,5 @@
 FROM mcr.microsoft.com/devcontainers/universal:2
 
 # Install mdimechanic
-RUN pip install mdimechanic
+RUN pip install mdimechanic && \
+    sh init.sh
