Try to run script on startup

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,5 @@
 FROM mcr.microsoft.com/devcontainers/universal:2
 
 # Install mdimechanic
-RUN pip install mdimechanic && \
-    sh init.sh
+RUN pip install mdimechanic
+
